--- a/project-1.html
+++ b/project-1.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <title>CHIP V2.0</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./src/output.css" rel="stylesheet">
@@ -76,7 +79,7 @@
     <div class="flex flex-col justify-center text-center h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <div>
             <h1 class="text-3xl font-bold">Community Health Integrated Platform (CHIP) V2.0</h1>
-            <h2 class="text-lg text-gray-400 mt-4">Streamlining Healthcare Operations at the Grassroots.</h2>
+            <h2 class="text-lg text-gray-400 mt-4">Streamlining Healthcare Operations at the Grassroots</h2>
         </div>
         
         <div class="lg:w-5/5 mt-4 lg:mx-auto">
@@ -750,7 +753,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Login & Registration (RBAC Enabled)</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Login & Registration (RBAC Enabled)</h3>
                         <p class="text-gray-300 font-medium">Secure and Role-Aware Onboarding for Every User</p>
                         <p class="text-gray-400 font-light">The login and registration module ensures that users access only the features relevant to their role through RBAC. With OTP-based login, QR scanning for facility codes, and a guided first-time setup, the flow is built to be both secure and simple—especially for users with limited digital literacy.</p>
                     </div>
@@ -793,7 +796,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Punch-IN / Punch-OUT System</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Punch-IN / Punch-OUT System</h3>
                         <p class="text-gray-300 font-medium">Reliable Attendance Tracking Built for the Field</p>
                         <p class="text-gray-400 font-light">This module enables healthcare workers to log their attendance with geo-tagged timestamps, even in low-connectivity areas. With offline caching, sync retries, and clear visual feedback, it helps maintain transparency and enables supervisors to monitor field activity in real time.</p>
                     </div>
@@ -836,7 +839,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Digital Health Survey (DHS)</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Digital Health Survey (DHS)</h3>
                         <p class="text-gray-300 font-medium">Streamlined, Error-Resistant Surveying for Frontline Health Workers</p>
                         <p class="text-gray-400 font-light">The DHS module guides users through complex health data collection with modular forms, skip logic, and autosave functionality. Designed for offline use, it supports various survey types while reducing errors and effort through smart validations and data reuse.</p>
                     </div>
@@ -879,7 +882,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">ABHA ID Integration</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">ABHA ID Integration</h3>
                         <p class="text-gray-300 font-medium">Seamless Health ID Linking Without Disrupting Workflows</p>
                         <p class="text-gray-400 font-light">This module enables optional ABHA ID creation or linking during or after registration, supporting both Aadhaar and mobile-based methods. With a guided, non-blocking flow, it promotes interoperability with India’s digital health stack—without slowing down frontline tasks.</p>
                     </div>
@@ -922,7 +925,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Family Planning (FP) Module</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Family Planning (FP) Module</h3>
                         <p class="text-gray-300 font-medium">Proactive Tracking and Counseling for Better Family Planning Outcomes</p>
                         <p class="text-gray-400 font-light">The FP module helps ASHAs select, record, and follow up on contraceptive methods through visual aids and personalized timelines. With built-in reminders and resupply tracking, it supports continuity of care and reduces dropouts through timely, informed engagement.</p>
                     </div>
@@ -965,7 +968,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Sickle Cell Testing & Tracking</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Sickle Cell Testing & Tracking</h3>
                         <p class="text-gray-300 font-medium">Early Detection and Follow-Up for Improved Sickle Cell Management</p>
                         <p class="text-gray-400 font-light">The Sickle Cell Testing & Tracking module enables healthcare workers to screen high-risk individuals, log test results, and monitor confirmed cases. Integrated within the CHIP workflow, it ensures continuity through alerts, follow-ups, and linkages with family profiles—promoting proactive care and reducing long-term complications.</p>
                     </div>
@@ -1008,7 +1011,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Profile – Facility, Geography & User</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Profile – Facility, Geography & User</h3>
                         <p class="text-gray-300 font-medium">Smart Profiles That Adapt to Roles, Locations, and Hierarchies</p>
                         <p class="text-gray-400 font-light">This module manages accurate role-based user details, including facility and geographic mapping via QR scan. With support for multi-role logins, it streamlines access for rotating staff and ensures clean data for reporting and audits across locations.</p>
                     </div>
@@ -1051,7 +1054,7 @@
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
                 <div class="flex flex-col gap-8">
                     <div class="flex flex-col gap-2">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">Role-Based Homepages</h3>
+                        <h3 class="text-xl lg:text-2xl font-semibold">Role-Based Homepages</h3>
                         <p class="text-gray-300 font-medium">A Personalized Starting Point for Every User Role</p>
                         <p class="text-gray-400 font-light">The role-based homepage adapts to each user’s responsibilities—showing only relevant tasks, alerts, and shortcuts. By minimizing clutter and prioritizing daily actions, it boosts focus, reduces errors, and encourages consistent, confident app use.</p>
                     </div>
