--- a/ux-animation.html
+++ b/ux-animation.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html>
 <head>
+    <title>sumit.design</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./src/output.css" rel="stylesheet">
@@ -41,7 +44,7 @@
     </style>
 </head>
 
-<body class="bg-[url('data:image/svg+xml,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20viewBox%3D%220%200%2020%2020%22%20xmlns%3D%22http://www.w3.org/2000/svg%22%3E%3Ccircle%20cx%3D%2210%22%20cy%3D%2210%22%20r%3D%220.5%22%20fill%3D%22%23444%22%20/%3E%3C/svg%3E')] bg-fixed bg-repeat bg-gray-950 text-gray-200 flex flex-col gap-8 lg:gap-12 animated-bg">
+<body class="bg-[url('data:image/svg+xml,%3Csvg%20width%3D%2220%22%20height%3D%2220%22%20viewBox%3D%220%200%2020%2020%22%20xmlns%3D%22http://www.w3.org/2000/svg%22%3E%3Ccircle%20cx%3D%2210%22%20cy%3D%2210%22%20r%3D%220.5%22%20fill%3D%22%23444%22%20/%3E%3C/svg%3E')] bg-fixed bg-repeat bg-gray-950 text-gray-200 flex flex-col gap-8 lg:gap-12 animated-bg font-light">
 
     <!-- Floating Action Button -->
     <!-- <button id="backToTop" onclick="window.scrollTo({ top: 0, behavior: 'smooth' })" class="fixed bottom-6 right-6 bg-gray-800 hover:bg-gray-700 text-white hover:text-amber-300 p-4 rounded-full shadow-lg transition duration-300 z-50 opacity-0 pointer-events-none">
@@ -79,8 +82,8 @@
     <!-- Project Hero -->
     <div class="flex flex-col justify-center text-center h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <div>
-            <h1 class="text-3xl font-bold">UX Animation</h1>
-            <h2 class="text-lg text-gray-400 mt-4">Enhancing Clarity and Flow Through Micro-Interactions</h2>
+            <h1 class="text-3xl font-bold">UI Animation</h1>
+            <h2 class="text-lg text-gray-400 mt-4">Enhancing Clarit y and Flow Through Micro-Interactions</h2>
         </div>
         
         <div class="lg:w-5/5 mt-4 lg:mx-auto">
@@ -116,7 +119,7 @@
             </div>
 
             <div class="flex flex-col items-center w-full">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images/icons/tools.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-gray-400 text-center lg:w-4/5">Tools</p>
                 <p class="font-bold text-center mt-2">Adobe After Effects, Invision, Protopie, Figma</p>
             </div>
