--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html class="scroll-smooth">
 <head>
+    <title>sumit.design</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon/favicon.ico">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./src/output.css" rel="stylesheet">
